tetrateci/tsb-util/fixtures/httpbin_generated_direct/tsb-objects/tenant.yaml
apiVersion: api.tsb.tetrate.io/v2
kind: Tenant
metadata:
  organization: tetrate
  name: tenant0
spec:
  displayName: tenant0
