tetrateci/tsb-util/fixtures/httpbin_generated_direct/tsb-objects/workspaces.yaml
apiversion: api.tsb.tetrate.io/v2
kind: Workspace
metadata:
  organization: tetrate
  name: htbnt0ws0
  tenant: tenant0
spec:
  displayName: htbnt0ws0
  namespaceSelector:
    names:
    - demo/t0w0demohtdnnb0f
